--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,40 +1,29 @@
 <div class="row">
-        <div class="col-md-4">
-        
+    <div class="row">
+   
+    
+        <div class="col">
                 <div class="card" >
-                    <div class="card-header">My Quotes</div>
-                    <ul class="list-group list-group-flush">
-                        <li *ngFor="let quote of Model.MyQuotes" class="list-group-item">
-                            {{quote}}
-                        </li>
-                    </ul>
-                  </div>
-            </div>
-    <div class="col-md-8">
-        <div class="card bg-success mb-3" >
-            <div class="card-header text-white">Played Quotes</div>
-                <ul class="list-group list-group-flush">
-                    <li *ngFor="let quote of Model.PlayedQuotes" class="list-group-item d-flex justify-content-between align-items-center">
-                        {{quote.Text}}
-                        <span class="badge badge-light">{{quote.PlayerName}}</span>
-                    </li>
-                </ul>
-            </div>
-            
-            <div class="card">
-                <img class="card-img" [src]="Model.Picture" />
-            </div>
-    </div>
-    <div class="col-md-4">
-        
-        <div class="card" >
-            <div class="card-header">Other Players</div>
-            <ul class="list-group list-group-flush">
-                <li *ngFor="let player of Model.Players" class="list-group-item">
-                    <img style="height: 16px; width: 16px" class="rounded">
-                    {{player.Name}}
-                </li>
-            </ul>
+                        <img class="card-img-top" src="https://media2.s-nbcnews.com/j/newscms/2018_06/2316986/180205-eagles-nick-foles-trophy-njs-847a_dc249df1dd2bf248f5f11b3c6cf6a86c.nbcnews-fp-320-280.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+        </div>
+    </div><div class="row">
+   
+    
+        <div class="col">
+                <div class="card" >
+                        <img class="card-img-top" src="https://media2.s-nbcnews.com/j/newscms/2018_06/2316986/180205-eagles-nick-foles-trophy-njs-847a_dc249df1dd2bf248f5f11b3c6cf6a86c.nbcnews-fp-320-280.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
         </div>
     </div>
 </div>
