--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,24 +4,28 @@
     
         <div class="col">
                 <div class="card" >
-                        <img class="card-img-top" src="https://media2.s-nbcnews.com/j/newscms/2018_06/2316986/180205-eagles-nick-foles-trophy-njs-847a_dc249df1dd2bf248f5f11b3c6cf6a86c.nbcnews-fp-320-280.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="https://emsig-global.com/dr/wp-content/uploads/2018/01/01-Heres-Why-Your-Next-Crash-Diet-Is-Doomed-to-Fail-According-to-Science-shutterstock_544589101-1024x683.jpg" 
+                        style="width:700px;height:500px;"
+                        alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Diet </h5>
+                          <p class="card-text">Some basic diet hacks.</p>
+                          <a href="https://drpompa.com/diet/basic-diet-plan" class="btn btn-primary">View!</a>
                         </div>
                       </div>
         </div>
-    </div><div class="row">
+    </div>
+    <div class="row">
    
     
         <div class="col">
                 <div class="card" >
-                        <img class="card-img-top" src="https://media2.s-nbcnews.com/j/newscms/2018_06/2316986/180205-eagles-nick-foles-trophy-njs-847a_dc249df1dd2bf248f5f11b3c6cf6a86c.nbcnews-fp-320-280.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="https://static01.nyt.com/images/2017/04/09/well/9minute-workout-promo/9minute-workout-promo-jumbo.png"
+                         alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Basic warm up exercies</h5>
+                          <p class="card-text">Some warm up exercies before workout.</p>
+                          <a href="https://www.nhs.uk/Livewell/fitness/Pages/how-to-warm-up.aspx" class="btn btn-primary">View!</a>
                         </div>
                       </div>
         </div>
