--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,12 +10,9 @@
                 <a class="nav-link" routerLink="/home" routerLinkActive="active" >Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" routerLink="/game" routerLinkActive="active" >Play</a>
+                <a class="nav-link" routerLink="/game" routerLinkActive="active" >Plan</a>
                 </li>
                 
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
                 <li class="nav-item" style="float:right" >
                     <a class="nav-link" routerLink="/login" routerLinkActive="active" >Login </a>
                 </li>
