after edit alot

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,13 @@
-<style type="text/css">
+<!-- <style type="text/css">
   .bgimg {
       background-image: url('');
   }
- </style>
-
+</style>
+ -->
 
   
-<div class="bgimg">
-   <img src = "https://greatist.com/sites/default/files/running.jpg" >
- </div>
+<img src = "https://greatist.com/sites/default/files/running.jpg" style="width:1300px;height:900px;">
+
  
            
                   
