--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,23 @@
-<div class="login-page">
-    <div class="form">
-      <form class="register-form">
-        <input type="text" placeholder="name"/>
-        <input type="password" placeholder="password"/>
-        <input type="text" placeholder="email address"/>
-        <button>create</button>
-        <p class="message">Already registered? <a href="#">Sign In</a></p>
-      </form>
-      <form class="login-form">
-        <input type="text" placeholder="username"/>
-        <input type="password" placeholder="password"/>
-        <button>login</button>
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
-      </form>
+ <div class="row justify-content-center" >
+    <div class="col-md-6">
+        
+        <div class="card" >
+            <div class="card-header"> Login </div>
+            <div class="card-body">
+                <div class="row" >
+                        <div class="col">
+                                <button class="btn btn-block border-success bg-light" (click)="fblogin()"  >Login with Facebook</button>
+                                <button class="btn btn-block border-success bg-light" (click)="googlelogin()" >Login with Google</button>
+                        </div>
+                        <div class="col">
+                                <input #Name placeholder="User Name" />
+                                <input #Password placeholder="Password" />
+                                
+                                <button (click)="login(Name.value, Password.value)" >Login</button>
+                        </div>
+                </div>
+                
+            </div>
+        </div>
     </div>
-  </div>
+</div>
