--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,23 +1,18 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">GetFit.</a>
+        <a class="navbar-brand" href="#">GetFit</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
                 <a class="nav-link" routerLink="/home" routerLinkActive="active" >Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" routerLink="/game" routerLinkActive="active" >Plan</a>
+                <a class="nav-link" routerLink="/login" routerLinkActive="active" >Play</a>
                 </li>
                 
-                <li class="nav-item" style="float:right" >
-                    <a class="nav-link" routerLink="/login" routerLinkActive="active" >Login </a>
-                </li>
-                
-
             </ul>
             </div>
         </div>
