--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
  -->
 
   
-<img src = "https://greatist.com/sites/default/files/running.jpg" style="width:1300px;height:900px;">
+<img src = "https://greatist.com/sites/default/files/running.jpg" align="center" style="width:1300px;height:900px;">
 
  
            
