--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<app-form></app-form>
 <div class="container">
     <app-messages></app-messages>
     <router-outlet></router-outlet>
