--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,7 +2,7 @@
   <div class="form">
 
       <label for="firstName">First Name</label>
-      <input id="firstName" type="text" class="form">
+      <input ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" class="form">
   </div>
   
   <div class="form">
