--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,7 +12,10 @@
                 <li class="nav-item">
                 <a class="nav-link" routerLink="/login" routerLinkActive="active" >Play</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/profile" routerLinkActive="active" >New User</a>
+                </li>
+                    
             </ul>
             </div>
         </div>
