--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/profile" routerLinkActive="active" >New User</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/try" routerLinkActive="active" >BMI </a>
+                </li>
                     
             </ul>
             </div>
