--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,6 +3,7 @@
 
 <div class="row">
   <div class="col">
+    <div class="card-body"><input id="typeahead-basic" type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search"/></div>
       <form action="/action_page.php" id="form1">
         
         First name: <input type="text" name="fname"><br><br>
