--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-primary">
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary" background-color: #f1f1f1>
     <div class="container">
         <a class="navbar-brand" href="#">GetFit</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,9 +15,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/profile" routerLinkActive="active" >New User</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/try" routerLinkActive="active" >BMI </a>
-                </li>
+                
                     
             </ul>
             </div>
